--- a/advnt.html
+++ b/advnt.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <!-- start of nav bar -->
       <div class="navigation">
-        <nav class="navbar navbar-expand-lg bg-white fixed-top px-5">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
              <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center img-fluid">
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="about.html">About me</a>
+                  <a class="nav-link" href="about.html">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="images/AndreaRiveraResume.pdf" target="_blank">Résumé</a>
@@ -50,39 +50,40 @@
 
           <section class="row bg-black hero" id="hero">
             <div class="col-md-12 my-auto position-relative text-center">
-              <img src="images/advnt/advnt.gif" alt="advnt logo" height="600px" width="1200px" class="img-fluid my-auto">
+              <img src="images/advnt/advnt.gif" alt="advnt logo" height="600" width="1200" class="img-fluid my-auto">
             </div>
           </section>
+          <div class="mx-3"> <!-- overall margin -->
 
-          <div class="row text-center justify-content-center py-5">
-            <div class="col-md-5 my-auto">
+          <div class="row justify-content-center py-5">
+            <div class="col-md-5 my-auto text-center">
               <h1 class="projectname"> advnt </h1>
-              <p class="text-muted"> Website Creation </p>
+              <p class="text-muted pt-3"> Website Creation </p>
               <p class="text-muted"> March 2024 - April 2024 </p>
               <p class="text-muted"> Web Design, Information Architecture </p>
             </div>
-            <div class="col-md-5 px-5">
-              <h2> Background </h2>
-              <p> advnt is a creative advertising portfolio highlighting the talent of the University of Florida's students. In 2024, advnt decided to redesign its website from scratch. The previous site did not fit the organization's branding and did not have a favorable user experience. My team was in charge of fixing key issues the previous site experienced.</p>
+            <div class="col-md-5">
+              <h2 class="text-center pb-3"> Background </h2>
+              <p class="ps-3"> advnt is a creative advertising portfolio highlighting the talent of the University of Florida's students. In 2024, advnt decided to redesign its website from scratch. The previous site did not fit the organization's branding and did not have a favorable user experience. My team was in charge of fixing key issues the previous site experienced.</p>
             </div>
           </div>
 
           <div class="row problem justify-content-center">
             <hr class="mb-5">
-            <div class="col-md-5 px-5 ">
-              <h2 class="text-center"> Goals</h2>
+            <div class="col-md-5">
+              <h2 class="text-center pb-3"> Goals</h2>
               <ol class="list-group-flush list-group-numbered">
-                <li class="list-group-item text-center py-3"> Create a custom URL </li>
-                <li class="list-group-item text-center pb-3"> Create a site that fits into advnt's branding </li>
-                <li class="list-group-item text-center pb-3"> Make it easy to update and upload new content </li>
+                <li class="list-group-item py-3"> Create a custom URL </li>
+                <li class="list-group-item pb-3"> Create a site that fits into advnt's branding </li>
+                <li class="list-group-item pb-3"> Make it easy to update and upload new content </li>
               </ol>
             </div>
             <hr class="mt-5">
           </div>
 
           <div class="row justify-content-center py-5">
-            <div class="col-md-8 px-5">
-              <h2 class="text-center"> Methods </h2>
+            <div class="col-md-8">
+              <h2 class="text-center pb-3"> Methods </h2>
               <p> The first step in redesigning advnt's website was to have an honest discussion with my team to evaluate what worked and what did not with the original site. We identified several key issues that needed addressing.</p>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center py-3"> <strong>URL</strong> - The organization is not paying for a domain making the URL seem unprofessional and unnecessarily lengthy.</li>
@@ -97,28 +98,28 @@
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/advnt/advntLanding.png" alt="advnt's old landing page" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/advntLanding.png" alt="advnt's old landing page" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">advnt's old landing page.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/advnt/advntVolumes.png" alt="advnt's old volumes page" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/advntVolumes.png" alt="advnt's old volumes page" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">advnt's old volumes page.</figcaption>
             </figure>
           </div>
 
         <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/advnt/advntPortfolio.png" alt="advnt's old portfolio" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/advntPortfolio.png" alt="advnt's old portfolio" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">advnt's old portfolio page.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/advnt/advntOnFilm.png" alt="advnt on film" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/advntOnFilm.png" alt="advnt on film" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">advnt on film page.</figcaption>
             </figure>
           </div>
 
 
-          <div class="row text-center justify-content-center py-5">
+          <div class="row justify-content-center py-5">
             <div class="col-md-8">
               <p> After examining the previous site design, we began discussing the features we wanted to incorporate into the new design. Based on our discussion, my team and I decided on the following changes: </p>
               <ol class="list-group-flush list-group-numbered">
@@ -130,23 +131,23 @@
           </div>
 
 
-          <div class="row text-center justify-content-center py-5">
+          <div class="row text-center justify-content-center pb-5">
             <div class="row text-center justify-content-center py-5">
               <figure class="figure col-md-5">
-                <img src="images/advnt/advntWf.png" alt="advnt brainstorm" height="300px" width="500px" class="img-fluid">
+                <img src="images/advnt/advntWf.png" alt="advnt brainstorm" height="300" width="500" class="img-fluid">
                 <figcaption class="figure-caption pt-3"> First wireframing session.</figcaption>
               </figure>
               <figure class="figure col-md-5">
-                <img src="images/advnt/advnt2Wf.png" alt="advnt wireframes" height="300px" width="500px" class="img-fluid">
+                <img src="images/advnt/advnt2Wf.png" alt="advnt wireframes" height="300" width="500" class="img-fluid">
                 <figcaption class="figure-caption pt-3">Wireframes created after discussion.</figcaption>
               </figure>
             </div>
-
+          </div>
 
 
             <div class="row justify-content-center py-5">
               <div class="col-md-8 py-5">
-                <p> Once we finalized the overall layout, we moved on to discussing the design elements.</p>
+                <p class="text-start"> Once we finalized the overall layout, we moved on to discussing the design elements.</p>
                 <p class="text-start py-3"> To align with the brand guidelines, we decided to keep the site simple and primarily black and white. This approach would allow the volumes and images to stand out more with their added colors.</p>
                 <p class="text-start pb-3"> While our color choices were simple, we aimed to create an "edgy" look by incorporating patterns and designs. These elements would add personality and interest to the pages without being too distracting.</p>
                 <p class="text-start pb-3">After discussing our vision, we communicated with the graphic design team and the copywriters to help us achieve this look.</p>
@@ -158,33 +159,33 @@
           <div class="row text-center justify-content-center py-5">
               <h2 class="pb-3"> Final Product </h2>
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntLanding.png" alt="New landing page." height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntLanding.png" alt="New landing page." height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">New landing page. Logo created into a gif to add "edgy" character that fits brand guidelines.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntCta.png" alt="advnt CTA" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntCta.png" alt="advnt CTA" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">CTA added at the bottom of the home page to encourage exploration of the site.</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntVolumes.png" alt="new Volumes Page design" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntVolumes.png" alt="new Volumes Page design" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Each volume has a different theme. We decided to match each section with designs that matched the aesthetic of each volume.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntVolumes2.png" alt="new Volumes Page design 2" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntVolumes2.png" alt="new Volumes Page design 2" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">Another example of how each volume was personalized. Fit brand guidelines and added interest to webpage without distracting from content.</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntMembers.png" alt="Members Page" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntMembers.png" alt="Members Page" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Members were included on a carousel to make them easy to see and access. On hover, their names and information are available.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/advnt/newadvntContact.png" alt="Contact page" height="300px" width="500px" class="img-fluid">
+              <img src="images/advnt/newadvntContact.png" alt="Contact page" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">A contact page was created to be easily accessible. This will be used for future submissions for new volumes.</figcaption>
             </figure>
           </div>
@@ -195,24 +196,24 @@
 
           <div class="row justify-content-center py-5">
             <hr class="mb-5">
-            <div class="col-md-8 px-5">
-              <h2> Key takeaways </h2>
-              <p class="py-3"> Completing this project highlighted the importance of setting clear expectations and maintaining transparent communication. Although the previous site met expectations on paper, its execution fell short. For the new site, I ensured a thorough understanding of the requirements and clearly communicated roles and expectations to all teams, preventing misunderstandings and ensuring successful implementation.</p>
-              <p> This project also taught me the importance of effective teamwork. While I helped the web design team develop the vision, we relied on the graphics and copywriting teams to create the content for the site. Despite its small scale, collaboration was crucial to achieving a successful outcome.</p>
-              <p><a href="https://www.advntuf.com/" target="_blank">Check out the live site here!</a></p>
+            <div class="col-md-8">
+              <h2 class="text-center"> Key takeaways </h2>
+              <p class="py-3 text-start"> Completing this project highlighted the importance of setting clear expectations and maintaining transparent communication. Although the previous site met expectations on paper, its execution fell short. For the new site, I ensured a thorough understanding of the requirements and clearly communicated roles and expectations to all teams, preventing misunderstandings and ensuring successful implementation.</p>
+              <p class="text-start"> This project also taught me the importance of effective teamwork. While I helped the web design team develop the vision, we relied on the graphics and copywriting teams to create the content for the site. Despite its small scale, collaboration was crucial to achieving a successful outcome.</p>
+              <p class="text-center"><a href="https://www.advntuf.com/" target="_blank">Check out the live site here!</a></p>
 
             </div>
             <hr class="mt-5">
           </div>
 
-
+        </div>
         </section>
 
         <section>
           <div class="row text-center justify-content-center py-5">
-            <div class="col-md-10 px-5">
+            <div class="col-md-10">
             <p><strong>View other projects here:</strong> </p>
-            <p><a class="no-dec" id="gw" href="gamefulWellness.html">Gameful Wellness</a> • <a class="no-dec" id="yos"href="yourOrganizingStudio.html">Your Organizing Studio</a> • <a class="no-dec" id="cally" href="cally.html">Cally</a></p>
+            <p><a class="no-dec" id="gw" href="gamefulWellness.html">Gameful Wellness</a> • <a class="no-dec" id="yos" href="yourOrganizingStudio.html">Your Organizing Studio</a> • <a class="no-dec" id="cally" href="cally.html">Cally</a></p>
             </div>
           </div>
         </section>
