--- a/gamefulWellness.html
+++ b/gamefulWellness.html
@@ -23,7 +23,7 @@
     <div class="container-fluid">
       <!-- start of nav bar -->
       <div class="navigation">
-        <nav class="navbar navbar-expand-lg bg-white fixed-top px-5">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
              <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center">
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="about.html">About me</a>
+                  <a class="nav-link" href="about.html">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="images/AndreaRiveraResume.pdf" target="_blank">Résumé</a>
@@ -52,36 +52,39 @@
 
         <section class="project">
 
+
           <section class="row bg-primary hero" id="hero">
             <div class="col-md-12 my-auto position-relative text-center">
-              <img src="images/gw/gwLogo.png" alt="Gameful Wellness Logo" class="mt-5 pt-5 img-fluid" height="400px" width="400px">
+              <img src="images/gw/gwLogo.png" alt="Gameful Wellness Logo" class="mt-5 pt-5 img-fluid" height="400" width="400">
             </div>
           </section>
+          <div class="mx-3"> <!-- overall margin -->
 
-          <div class="row text-center justify-content-center py-5">
-            <div class="col-md-5 my-auto">
+
+          <div class="row justify-content-center py-5">
+            <div class="col-md-5 my-auto text-center">
               <h1 class="projectname"> Gameful Wellness </h1>
-              <p class="text-muted"> App Design </p>
+              <p class="text-muted pt-3"> App Design </p>
               <p class="text-muted"> Februry 2024 - April 2024 </p>
               <p class="text-muted"> Product Design, User Research, Prototyping and Information Architecture </p>
             </div>
-            <div class="col-md-5 px-5">
-              <h2> Background </h2>
-              <p> My team embarked on developing a gamified self-care app to tackle the widespread challenge young adults face in establishing and maintaining healthy self-care habits. Recognizing the increasing popularity of gamification, we saw an opportunity to create an engaging solution that promotes personal development and mental well-being. By integrating entertaining elements, we aimed to make self-care practices more accessible and enjoyable, ultimately fostering long-term healthy habits.</p>
+            <div class="col-md-5 mx-5">
+              <h2 class="text-center pb-3"> Background </h2>
+              <p class="ps-3"> My team embarked on developing a gamified self-care app to tackle the widespread challenge young adults face in establishing and maintaining healthy self-care habits. Recognizing the increasing popularity of gamification, we saw an opportunity to create an engaging solution that promotes personal development and mental well-being. By integrating entertaining elements, we aimed to make self-care practices more accessible and enjoyable, ultimately fostering long-term healthy habits.</p>
             </div>
           </div>
 
           <div class="row problem text-center justify-content-center">
             <hr class="mb-5">
-            <div class="col-md-8 px-5">
-              <h2> Problem </h2>
-              <p>Young adults often struggle to build and maintain healthy routines due to a lack of motivation and difficulty feeling in the right "mood" for specific self-care activities.</p>
+            <div class="col-md-8 ">
+              <h2 class="pb-3"> Problem </h2>
+              <p class="text-start">Young adults often struggle to build and maintain healthy routines due to a lack of motivation and difficulty feeling in the right "mood" for specific self-care activities.</p>
             </div>
             <hr class="mt-5">
           </div>
 
           <div class="row problem justify-content-center">
-            <div class="col-md-8 px-5">
+            <div class="col-md-8 ">
               <h2 class="text-center pt-3"> Goals</h2>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center py-3"> <strong>Develop a Gamified Self-Care App</strong> - Create an app that helps users build and maintain healthy habits through engaging gamification techniques.</li>
@@ -93,8 +96,8 @@
           </div>
 
           <div class="row justify-content-center py-5">
-            <div class="col-md-5 px-5 my-auto">
-              <h2 class="text-center"> Market Trends</h2>
+            <div class="col-lg-5 my-auto">
+              <h2 class="text-center pb-3"> Market Trends</h2>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center pb-3"> <strong>Rise in Gamification of Apps</strong> - Increasing popularity of apps that incorporate game-like elements to enhance user engagement. </li>
                 <li class="list-group-item justify-content-center pb-3"> <strong> - Blend of Entertainment and Personal Development</strong> Growing trend of apps that combine entertainment with self-improvement features.</li>
@@ -103,8 +106,8 @@
               </ol>
               </div>
 
-            <figure class="figure col-md-5 text-center">
-              <img src="images/gw/stakeholders.png" alt="Gameful Wellness Stakeholders" height="400px" width="400px" class="img-fluid">
+            <figure class="figure col-lg-5 text-center">
+              <img src="images/gw/stakeholders.png" alt="Gameful Wellness Stakeholders" height="400" width="400" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Stakeholders</figcaption>
             </figure>
           </div>
@@ -113,10 +116,10 @@
             <h2>Competition Analysis</h2>
             <div class="row text-center justify-content-center py-5">
 
-              <div class="col-md-3">
-                <img src="images/gw/finch.png" height = "500px" width="300px" alt="" class="img-fluid">
+              <div class="col-lg-3 text-center pb-3">
+                <img src="images/gw/finch.png" height = "500" width="300" alt="" class="img-fluid">
                 <p class="pt-2"><strong>Finch: Self-care Pet</strong></p>
-                <ul class="list-group-flush list-group-numbered text-center ms-5 px-5">
+                <ul class="list-group-flush list-group-numbered text-center ms-5 ">
                   <li class="list-group-item justify-content-center pb-3"> Goal setting</li>
                   <li class="list-group-item justify-content-center pb-3"> Habit tracking</li>
                   <li class="list-group-item justify-content-center pb-3"> Gamification</li>
@@ -127,10 +130,10 @@
                 </ul>
               </div>
 
-              <div class="col-md-3">
-                <img src="images/gw/me+.png" height = "500px" width="300px"alt="" class="img-fluid">
+              <div class="col-lg-3 pb-3">
+                <img src="images/gw/me+.png" height ="500" width="300" alt="" class="img-fluid">
                 <p class="pt-2"><strong>Me+ Daily Routine Planning</strong></p>
-                <ul class="list-group-flush list-group-numbered text-center ms-5 px-5">
+                <ul class="list-group-flush list-group-numbered text-center ms-5 ">
                   <li class="list-group-item justify-content-center pb-3"> Goal setting</li>
                   <li class="list-group-item justify-content-center pb-3"> Habit tracking</li>
                   <li class="list-group-item justify-content-center pb-3"> Reflection</li>
@@ -138,10 +141,10 @@
                 </ul>
               </div>
 
-              <div class="col-md-3">
-                <img src="images/gw/habitRabbit.png" height = "500px" width="300px"alt="" class="img-fluid">
+              <div class="col-lg-3 pb-3">
+                <img src="images/gw/habitRabbit.png" height = "500" width="300" alt="" class="img-fluid">
                 <p class="pt-2"><strong> Habit Rabit: Habit Tracker</strong></p>
-                <ul class="list-group-flush list-group-numbered text-center ms-5 px-5">
+                <ul class="list-group-flush list-group-numbered text-center ms-5">
                   <li class="list-group-item justify-content-center pb-3"> Goal setting</li>
                   <li class="list-group-item justify-content-center pb-3"> Habit tracking</li>
                   <li class="list-group-item justify-content-center pb-3"> Gamification</li>
@@ -153,9 +156,9 @@
             </div>
 
             <div class="row justify-content-center py-5">
-              <div class="col-md-8">
-                <h2 class="pb-3"> Target Audience </h2>
-                <p> Our target users are adults between the ages of 18-30 who have an interest in mobile and video games. They are attracted to apps that gamify experiences, particularly those that can be played with friends. These users enjoy sharing discoveries and trying new activities. They are interested in self-improvement and enhancing their well-being. Notably, they are often more motivated to take care of themselves when it involves supporting their friends.</p>
+              <div class="col-md-8 my-auto">
+                <h2 class="text-center pb-3"> Target Audience </h2>
+                <p class="text-start"> Our target users are adults between the ages of 18-30 who have an interest in mobile and video games. They are attracted to apps that gamify experiences, particularly those that can be played with friends. These users enjoy sharing discoveries and trying new activities. They are interested in self-improvement and enhancing their well-being. Notably, they are often more motivated to take care of themselves when it involves supporting their friends.</p>
                 </div>
               </div>
             </div>
@@ -167,20 +170,20 @@
                 <p>During our user research phase, we conducted interviews with individuals from diverse backgrounds. Our interviewees were aged between 20-30 and had an interest in either games or self-care practices.</p>
               </div>
               <figure class="figure col-md-4 text-center ps-3">
-                <img src="images/gw/gwPersona.png" alt="User Persona" height="300px" width="600px" class="img-fluid">
+                <img src="images/gw/gwPersona.png" alt="User Persona" height="300" width="600" class="img-fluid">
               </figure>
             </div>
 
             <div class="row justify-content-center py-5">
               <figure class="figure col-md-5 text-center">
-                <img src="images/gw/gwJourney.png" alt="User Journey" height="500px" width="600px" class="img-fluid">
+                <img src="images/gw/gwJourney.png" alt="User Journey" height="500" width="600" class="img-fluid">
 
               </figure>
             </div>
 
             <div class="row justify-content-center py-5">
               <hr class="mb-5">
-              <div class="col-md-8 px-5">
+              <div class="col-md-8">
                 <h2 class="text-center pb-3"> What does this mean for us? </h2>
                 <p> Our analysis revealed that not many self-care apps effectively gamify the user experience while also providing online communities. Additionally, we found that Gen Z individuals are more inclined to help others before themselves. This demographic, along with young adults, has a strong desire for community and belonging. These insights highlight a unique opportunity for our app to fill a gap in the market by combining gamified self-care with a supportive online community.</p>
               </div>
@@ -219,68 +222,68 @@
           <div class="row text-center justify-content-center py-5">
               <h2 class="pb-3"> Final Product </h2>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwLanding.png" alt="gw landing page." height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwLanding.png" alt="gw landing page." height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Landing page when you open the app</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwLogin.png" alt="gw Login" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwLogin.png" alt="gw Login" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Login page</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwPassword.png" alt="gw forgot password" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwPassword.png" alt="gw forgot password" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Password reset page</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwSignup.png" alt="advnt CTA" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwSignup.png" alt="advnt CTA" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Sign up page</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-3">
-              <img src="images/gw/gwChoice.png" alt="gw choice" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwChoice.png" alt="gw choice" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Pick the "vibe" that best fits your needs</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwReminders.png" alt="gw reminders" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwReminders.png" alt="gw reminders" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">See what tasks to complete today and helpful reminders</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-3">
-              <img src="images/gw/gwAction.png" alt="gw action game" height="500px" width="300px" class="img-fluid">
-              <figcaption class="figure-caption pt-3">Action game: fight your enemies by completing tasks and earn XP/figcaption>
+              <img src="images/gw/gwAction.png" alt="gw action game" height="500" width="300" class="img-fluid">
+              <figcaption class="figure-caption pt-3">Action game: fight your enemies by completing tasks and earn XP</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwAction2.png" alt="gw customize" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwAction2.png" alt="gw customize" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Customize your action game to help fight your enemies</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwCozy.png" alt="gw cozy game" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwCozy.png" alt="gw cozy game" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Cozy game: tend to your garden and watch your plants grow as you complete tasks</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwCozy2.png" alt="gw cozy customize" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwCozy2.png" alt="gw cozy customize" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Customize and exapnd your garden game to fit your preferences</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-3">
-              <img src="images/gw/gwXp.png" alt="gw Xp" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwXp.png" alt="gw Xp" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">Check your progress and and log completed tasks</figcaption>
             </figure>
             <figure class="figure col-md-3">
-              <img src="images/gw/gwProfile.png" alt="gw profile" height="500px" width="300px" class="img-fluid">
+              <img src="images/gw/gwProfile.png" alt="gw profile" height="500" width="300" class="img-fluid">
               <figcaption class="figure-caption pt-3">View your profile and information</figcaption>
             </figure>
               <figure class="figure col-md-3">
-                <img src="images/gw/gwChats.png" alt="gw chats" height="500px" width="300px" class="img-fluid">
+                <img src="images/gw/gwChats.png" alt="gw chats" height="500" width="300" class="img-fluid">
                 <figcaption class="figure-caption pt-3">See what friends are online and view anonymous discussion boards</figcaption>
               </figure>
               <figure class="figure col-md-3">
-                <img src="images/gw/gwChat.png" alt="gw chat" height="500px" width="300px" class="img-fluid">
+                <img src="images/gw/gwChat.png" alt="gw chat" height="500" width="300" class="img-fluid">
                 <figcaption class="figure-caption pt-3">Participate in anonymous discussion to share experiences, receive advice, and connect with others</figcaption>
             </figure>
           </div>
@@ -288,7 +291,7 @@
 
           <div class="row justify-content-center py-5">
             <hr class="mb-5">
-            <div class="col-md-8 px-5">
+            <div class="col-md-8">
               <h2 class="text-center"> Key takeaways </h2>
               <p class="py-3"> Creating the wireflow was more challenging than anticipated, as it required careful consideration of how each button would function and where it would lead users. Although the wireflow itself doesn't require extensive detail, it demanded significant thought to ensure the application was logical and met user needs.</p>
               <p>Additionally, I used Figma to develop the prototype. While the visual design process in Figma was relatively straightforward, connecting various pages for the interactive prototype proved complex and confusing.</p>
@@ -300,14 +303,14 @@
             <hr class="mt-5">
           </div>
 
-
+        </div>
         </section>
 
         <section>
           <div class="row text-center justify-content-center py-5">
-            <div class="col-md-10 px-5">
+            <div class="col-md-10 ">
             <p><strong>View other projects here:</strong> </p>
-            <p><a class="no-dec" id="yos"href="yourOrganizingStudio.html">Your Organizing Studio</a> • <a class="no-dec" id="cally" href="cally.html">Cally</a> • <a class="no-dec" id="advnt" href="advnt.html">advnt</a></p>
+            <p><a class="no-dec" id="yos" href="yourOrganizingStudio.html">Your Organizing Studio</a> • <a class="no-dec" id="cally" href="cally.html">Cally</a> • <a class="no-dec" id="advnt" href="advnt.html">advnt</a></p>
             </div>
           </div>
         </section>
