--- a/yourOrganizingStudio.html
+++ b/yourOrganizingStudio.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <!-- start of nav bar -->
       <div class="navigation">
-        <nav class="navbar navbar-expand-lg bg-white fixed-top px-5">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
              <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center">
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="about.html">About me</a>
+                  <a class="nav-link" href="about.html">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="images/AndreaRiveraResume.pdf" target="_blank">Résumé</a>
@@ -50,28 +50,30 @@
 
           <section class="row yoshead hero" id="hero">
             <div class="col-md-12 my-auto position-relative text-center">
-              <img src="images/yos/yosLogo.png" alt="yos logo" class="mt-5 pt-5 img-fluid" height="300px" width="500px">
+              <img src="images/yos/yosLogo.png" alt="yos logo" class="mt-5 pt-5 img-fluid" height="300" width="500">
             </div>
           </section>
 
-          <div class="row text-center justify-content-center py-5">
-            <div class="col-md-5 my-auto">
+          <div class="mx-3"> <!-- overall margin -->
+
+          <div class="row justify-content-center py-5">
+            <div class="col-md-5 my-auto text-center">
               <h1 class="projectname"> Your Organizing Studio </h1>
-              <p class="text-muted"> Website Redesign </p>
+              <p class="text-muted pt-3"> Website Redesign </p>
               <p class="text-muted"> May 2023 - August 2023 </p>
-              <p class="text-muted"> Web Desing, Information Architecture, SEO </p>
+              <p class="text-muted"> Web Design, Information Architecture, SEO </p>
             </div>
-            <div class="col-md-5 px-5">
-              <h2> Background </h2>
-              <p>Your Organizing Studio is a professional organizing business focused on decluttering and simplifying clients' lives through the creation of personalized systems. In 2023, the company underwent a rebranding and needed its website to reflect its new brand identity.</p>
-              <p>Throughout this project, I collaborated closely with the founder to ensure the final output aligned with her vision while providing guidance through the design process.</p>
+            <div class="col-md-5">
+              <h2 class="text-center pb-3"> Background </h2>
+              <p class="ps-3">Your Organizing Studio is a professional organizing business focused on decluttering and simplifying clients' lives through the creation of personalized systems. In 2023, the company underwent a rebranding and needed its website to reflect its new brand identity.</p>
+              <p class="ps-3">Throughout this project, I collaborated closely with the founder to ensure the final output aligned with her vision while providing guidance through the design process.</p>
             </div>
           </div>
 
           <div class="row problem justify-content-center">
             <hr class="mb-5">
-            <div class="col-md-8 px-5">
-              <h2 class="text-center"> Problem </h2>
+            <div class="col-md-8">
+              <h2 class="text-center pb-3"> Problem </h2>
               <p>The original website appeared outdated and did not align with the new branding. It was essential to modernize the site to reflect the refreshed brand identity and appeal to current and potential clients.</p>
               <p>I discussed the vision and desired changes with the founder of Your Organizing Studio. Initially, she only wanted a website redesign. However, after analyzing her web traffic statistics, I noted that a large percentage of viewers accessed the site via mobile devices. I explained that clients are more likely to search for the business on their phones than on computers. I explained the importance of having a site that is functional accross all devices as many of her clients are busy and constantly "on the go."</p>
 
@@ -85,8 +87,8 @@
 
           <div class="row problem justify-content-center">
 
-            <div class="col-md-8 px-5 ">
-              <h2 class="text-center"> Goals</h2>
+            <div class="col-md-8">
+              <h2 class="text-center py-3"> Goals</h2>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center pb-3"><strong> Update Branding</strong> - Ensure the website reflects the new brand identity.</li>
                 <li class="list-group-item justify-content-center pb-3"><strong> Modernize Layout</strong> - Redesign the site with a contemporary and appealing layout.</li>
@@ -98,47 +100,47 @@
           </div>
 
           <div class="row justify-content-center py-5">
-            <div class="col-md-8 px-5">
-              <h2 class="text-center"> Methods </h2>
+            <div class="col-md-8">
+              <h2 class="text-center pb-3"> Methods </h2>
               <p>With a clearer vision and agreed-upon expectations, I began creating the wireframes for the site. The design focused primarily on desktop users but was also developed to function seamlessly on mobile devices.</p>
             </div>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/yos/yosWf.png" alt="yos wire frame" height="400px" width="500px" class="img-fluid">
+              <img src="images/yos/yosWf.png" alt="yos wire frame" height="400" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Wireframe</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/yos/yosWf2.png" alt="yos wireframe 2" height="400px" width="500px" class="img-fluid">
+              <img src="images/yos/yosWf2.png" alt="yos wireframe 2" height="400" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Wireframe</figcaption>
             </figure>
           </div>
 
           <div class="row justify-content-center py-5">
-            <div class="col-md-8 px-5">
+            <div class="col-md-8">
               <p>After discussing the wireframe and its functionality with the client, I incorporated her input and created the first prototype iteration.</p>
             </div>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/yos/oldyosHome.png" alt="yos old home page" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/oldyosHome.png" alt="yos old home page" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Your Organizing Studio's first iteration of the home page.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/yos/oldyosFooter.png" alt="yos old footer" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/oldyosFooter.png" alt="yos old footer" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> First rendition at creating the footer with all of the client's requests.</figcaption>
             </figure>
           </div>
 
         <div class="row text-center justify-content-center py-5">
           <figure class="figure col-md-5">
-            <img src="images/yos/oldyosBlog.png" alt="yos old blog" height="300px" width="500px" class="img-fluid">
+            <img src="images/yos/oldyosBlog.png" alt="yos old blog" height="300" width="500" class="img-fluid">
             <figcaption class="figure-caption pt-3"> First blog design.</figcaption>
           </figure>
             <figure class="figure col-md-5">
-              <img src="images/yos/oldyosPortfolio.png" alt="yos old portfolio" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/oldyosPortfolio.png" alt="yos old portfolio" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Your Organizing Studio's portfolio page.</figcaption>
             </figure>
           </div>
@@ -146,20 +148,20 @@
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-12">
-              <img src="images/yos/yosServices.png" alt="yos old services" height="700px" width="500px" class="img-fluid">
+              <img src="images/yos/yosServices.png" alt="yos old services" height="700" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> First iteration of the services page. Includes all necessary information for potential clients to know.</figcaption>
             </figure>
           </div>
 
 
-          <div class="row text-center justify-content-center py-5">
+          <div class="row justify-content-center py-5">
             <div class="col-md-8">
               <p class="pb-3"> I presented the first iteration to the client to help her visualize how the pages would function. While she was generally pleased, she revised some of her preferences after seeing the functioning prototype. The changes she requested included: </p>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center"> - Adding the logo to the navigation bar.</li>
                 <li class="list-group-item justify-content-center"> - Incorporating more dark green into the design.</li>
                 <li class="list-group-item justify-content-center"> - Reducing the size of the footer.</li>
-                <li class="list-group-item justify-content-center"> - Simplifying the services page to focus primarily on images, with each service presented in a more streamlined design.</li>
+                <li class="list-group-item justify-content-center"> - Simplifying the services page to focus primarily on images, -with each service presented in a more streamlined design.</li>
                 <li class="list-group-item justify-content-center"> - Moving the FAQ section to its own dedicated page.</li>
               </ol>
               <p class="pb-3"> As I began working on these changes, SquareSpace released a significant update that would drastically improve functionality and SEO. However, this update required recreating the website from scratch and later reconnecting the domain to the new site. I ensured the client was aware of this development, communicated the timeline changes, and explained the benefits of the update. She approved, and I proceeded to start from scratch with more creative leeway.</p>
@@ -173,29 +175,29 @@
           <div class="row text-center justify-content-center py-5">
               <h2 class="pb-3"> Final Product </h2>
               <figure class="figure col-md-5">
-                <img src="images/yos/yosHome.png" alt="yos home" height="300px" width="500px" class="img-fluid">
+                <img src="images/yos/yosHome.png" alt="yos home" height="300" width="500" class="img-fluid">
                 <figcaption class="figure-caption pt-3"> Included the logo into the navigation bar and included more of the dark green from client's branding into the site.</figcaption>
               </figure>
             <figure class="figure col-md-5">
-              <img src="images/yos/yosFooter.png" alt="yos footer" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/yosFooter.png" alt="yos footer" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Condensed information from the original footer into a more minimal design. Easier for users to read and utilize.</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/yos/yosFaq.png" alt="yos blog" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/yosFaq.png" alt="yos blog" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3">Rearranged the navigation content and created a new FAQ page and tab. This allows users to easily have their most common questions answered.</figcaption>
             </figure>
             <figure class="figure col-md-5">
-              <img src="images/yos/yosPortfolio.png" alt="yos portfolio" height="300px" width="500px" class="img-fluid">
+              <img src="images/yos/yosPortfolio.png" alt="yos portfolio" height="300" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Made minimal changes from the original design. Improved the quality of the images highlighted and implemented design choices requested from client.</figcaption>
             </figure>
           </div>
 
           <div class="row text-center justify-content-center py-5">
             <figure class="figure col-md-5">
-              <img src="images/yos/yosServices.png" alt="yos services" height="700px" width="500px" class="img-fluid">
+              <img src="images/yos/yosServices.png" alt="yos services" height="700" width="500" class="img-fluid">
               <figcaption class="figure-caption pt-3"> Redesigned the services page. Made design more intuitive to use.</figcaption>
             </figure>
           </div>
@@ -205,8 +207,8 @@
 
 
           <div class="row text-center justify-content-center py-5">
-            <div class="col-md-8 px-5">
-              <h2> Key takeaways </h2>
+            <div class="col-md-8">
+              <h2 class="pb-3"> Key takeaways </h2>
               <ol class="list-group-flush list-group-numbered">
                 <li class="list-group-item justify-content-center pb-3"><strong> Effective Client Communication</strong> - Learned the importance of clear and consistent communication with clients to understand their vision and expectations.</li>
                 <li class="list-group-item justify-content-center pb-3"><strong> Prioritizing Client Desires</strong> - Developed the ability to prioritize the client's preferences over personal design choices, especially regarding aesthetics. While I had my own ideas, the client's vision was paramount as it is her business.</li>
@@ -217,12 +219,12 @@
 
           </div>
 
-
+        </div>
         </section>
 
         <section>
           <div class="row text-center justify-content-center py-5">
-            <div class="col-md-10 px-5">
+            <div class="col-md-10">
             <p><strong>View other projects here:</strong> </p>
             <p><a class="no-dec" id="gw" href="gamefulWellness.html">Gameful Wellness</a> • <a class="no-dec" id="cally" href="cally.html">Cally</a> • <a class="no-dec" id="advnt" href="advnt.html">advnt</a></p>
             </div>
