--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div class="container-fluid">
         <!-- start of nav bar -->
         <div class="navigation">
-          <nav class="navbar navbar-expand-lg bg-white fixed-top px-5">
+          <nav class="navbar navbar-expand-lg bg-white fixed-top">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">
-               <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center" class="img-fluid">
+               <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center img-fluid">
                 Andrea Rivera
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="index.html#portfolio">Portfolio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link px-3" href="about.html">About me</a>
+                    <a class="nav-link" href="about.html">About me</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="images/AndreaRiveraResume.pdf" target="_blank">Résumé</a>
