--- a/otherWork.html
+++ b/otherWork.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
       <!-- start of nav bar -->
       <div class="navigation">
-        <nav class="navbar navbar-expand-lg bg-white fixed-top px-5">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
           <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
              <img src="images/ARlogo2.png" alt="Logo" width="70" height="70" class="d-inline-block align-text-center">
@@ -34,7 +34,7 @@
                   <a class="nav-link" href="index.html#portfolio">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link px-3" href="about.html">About me</a>
+                  <a class="nav-link" href="about.html">About me</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="images/AndreaRiveraResume.pdf" target="_blank">Résumé</a>
@@ -47,41 +47,42 @@
       <!-- end of nav bar -->
 
         <section class="project">
+          <div class="mx-3"> <!-- overall margin -->
 
         <div class="row mt-5 pt-5 text-center justify-content-center">
-          <div class="col-md-8">
+          <div class="col-lg-8">
             <h1 class="text-gradient pt-5 pb-2"> Feeling nosey? </h1>
             <p> I don't blame ya! Take a peek at some of the fun things I've made in the past!</p>
             <p>Click on the images to see the projects in their full-glory. </p>
           </div>
         </div>
 
-        <div class="row justify-content-center mx-5">
+        <div class="row justify-content-center">
           <h2 class="text-gradient text-center mt-5 pt-5 pb-3"> Coding Projects </h2>
-          <div class="col-md-3">
+          <div class="col-lg-3 text-center pb-3">
             <figure>
-              <a href="https://andrearivera.net/joke-o-pedia/"><img class="img-fluid img-thumbnail" src="images/jokeopedia.png" height="300px" width="400px"></a>
+              <a href="https://andrearivera.net/joke-o-pedia/"><img class="img-fluid img-thumbnail mx-auto" src="images/jokeopedia.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> Joke-o-pedia<br><small> HTML, CSS, Bootstrap, JavaScript, PHP</small></figcaption>
             </figure>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3 text-center pb-3">
             <figure>
-              <a href="https://andrearivera.net/yopo/"><img class="img-fluid img-thumbnail" src="images/yopo.png" height="300px" width="400px"></a>
+              <a href="https://andrearivera.net/yopo/"><img class="img-fluid img-thumbnail" src="images/yopo.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> YOPO Playlist<br><small> HTML, CSS, Bootstrap, AOS</small> </figcaption>
             </figure>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3 text-center pb-3">
             <figure>
-              <a href="https://andrrearivera.github.io/beginners-guide-to-ux-ui-design/"><img class="img-fluid img-thumbnail" src="images/beginnersguide.png" height="300px" width="400px"></a>
+              <a href="https://andrrearivera.github.io/beginners-guide-to-ux-ui-design/"><img class="img-fluid img-thumbnail" src="images/beginnersguide.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> A Beginner's Guide to UX/UI<br><small> HTML, CSS, Bootstrap, JavaScript, Scrollspy</small> </figcaption>
             </figure>
           </div>
 
-          <div class="col-md-3">
+          <div class="col-lg-3 text-center pb-3">
             <figure>
-              <a href="https://andrrearivera.github.io/music-sampler/"><img class="img-fluid img-thumbnail" src="images/maneskin.png" height="300px" width="400px"></a>
+              <a href="https://andrrearivera.github.io/music-sampler/"><img class="img-fluid img-thumbnail" src="images/maneskin.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> Måneskin Music Player <br><small> HTML, CSS, JavaScript</small>
               </figcaption>
             </figure>
@@ -93,48 +94,50 @@
         </div>
 
 
-        <div class="row justify-content-center mx-5">
+        <div class="row justify-content-center">
           <h2 class="text-gradient text-center mt-5 pt-5 pb-3"> Wireframes </h2>
-          <div class="col-md-4">
+          <div class="col-lg-4 text-center pb-3">
             <figure>
-              <a href="https://www.canva.com/design/DAFajfLnxmg/_39OKz5Rq9pypBxgMxUAfg/view?utm_content=DAFajfLnxmg&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/ebayWf.png" height="300px" width="400px"></a>
+              <a href="https://www.canva.com/design/DAFajfLnxmg/_39OKz5Rq9pypBxgMxUAfg/view?utm_content=DAFajfLnxmg&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/ebayWf.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> eBay Navigation Redesign<br><small>During a school project, I couldn't help but notice how much eBay's navigation was bugging me—so I took matters into my own hands and gave it a complete refresh. Because why not?</small></figcaption>
             </figure>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 text-center pb-3">
             <figure>
-              <a href="https://www.canva.com/design/DAFa2VbYvp4/K249R3BMmozQ_fDY8Hgltw/view?utm_content=DAFa2VbYvp4&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/aphi.png" height="300px" width="400px"></a>
+              <a href="https://www.canva.com/design/DAFa2VbYvp4/K249R3BMmozQ_fDY8Hgltw/view?utm_content=DAFa2VbYvp4&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/aphi.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> Alpha Phi Website<br><small>My sorority’s website was in dire need of a makeover, so I created this wireframe and pitched it to the marketing team as a fresh source of inspiration.</small></figcaption>
             </figure>
           </div>
-          <div class="col-md-4">
+          <div class="col-lg-4 text-center pb-3">
             <figure>
-              <a href="https://www.canva.com/design/DAGRDGwLE_Y/2JdmDodrscf13MTspAfaew/view?utm_content=DAGRDGwLE_Y&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/portfolioWf.png" height="300px" width="400px"></a>
+              <a href="https://www.canva.com/design/DAGRDGwLE_Y/2JdmDodrscf13MTspAfaew/view?utm_content=DAGRDGwLE_Y&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/portfolioWf.png" height="300" width="400"></a>
               <figcaption class="pt-3 text-center"> Portfolio Wireframe<br><small>Of course I created wireframes while designing this site! I'm a visual person—it's just how my brain works!</small></figcaption>
             </figure>
           </div>
+        </div>
 
-          <div class="row justify-content-center mx-5">
+          <div class="row justify-content-center">
             <h2 class="text-gradient text-center mt-5 pt-5 pb-3"> Marketing & Strategy </h2>
-            <div class="col-md-4">
+            <div class="col-lg-4 text-center pb-3">
               <figure>
-                <a href="images/lfbPresentation.pdf" target="_blank"><img class="img-fluid img-thumbnail" src="images/lfb.png" height="300px" width="400px"></a>
+                <a href="images/lfbPresentation.pdf" target="_blank"><img class="img-fluid img-thumbnail" src="images/lfb.png" height="300" width="400"></a>
                 <figcaption class="pt-3 text-center"> Latin Food Blessing<br><small> A local business reached out to my team for some marketing help, and I jumped in with UX/UI, strategy, and even served as the translator.</small></figcaption>
               </figure>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 text-center pb-3">
               <figure>
-                <a href="https://www.canva.com/design/DAFZ5puwy34/5CXxdAOMUQDkH2f3pYQeGg/view?utm_content=DAFZ5puwy34&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/ebay.png" height="300px" width="400px"></a>
+                <a href="https://www.canva.com/design/DAFZ5puwy34/5CXxdAOMUQDkH2f3pYQeGg/view?utm_content=DAFZ5puwy34&utm_campaign=designshare&utm_medium=link&utm_source=editor"><img class="img-fluid img-thumbnail" src="images/ebay.png" height="300" width="400"></a>
                 <figcaption class="pt-3 text-center">eBay<br><small>In this quick challenge, a small team and I brainstormed creative ways to get Gen Z excited about utilizing and engaging with eBay.</small></figcaption>
               </figure>
             </div>
-            <div class="col-md-4">
+            <div class="col-lg-4 text-center pb-3">
               <figure>
-                <a href="https://www.canva.com/design/DAEwY3vqoOk/RyW8oz2Z8xfTxTCfSbXg_w/view?utm_content=DAEwY3vqoOk&utm_campaign=designshare&utm_medium=link&utm_source=editor "><img class="img-fluid img-thumbnail" src="images/disneyplus.png" height="300px" width="400px"></a>
+                <a href="https://www.canva.com/design/DAEwY3vqoOk/RyW8oz2Z8xfTxTCfSbXg_w/view?utm_content=DAEwY3vqoOk&utm_campaign=designshare&utm_medium=link&utm_source=editor "><img class="img-fluid img-thumbnail" src="images/disneyplus.png" height="300" width="400"></a>
                 <figcaption class="pt-3 text-center">Disney+ Creative Brief<br><small> A class project I worked on where I did research and strategy. </small></figcaption>
               </figure>
             </div>
-
+          </div>
+        </div>
         </section>
 
 
@@ -142,7 +145,7 @@
 
         <!-- start footer-->
       <footer class="row text-center mt-5 pt-5">
-        <div class="col-md-12">
+        <div class="col-lg-12">
           <p class= "text-muted"> Handcoded with ♡ </p>
         </div>
       </footer> <!--end footer -->
